--- a/firmware/smart-tomato-garden/web/i18n/cn.json
+++ b/firmware/smart-tomato-garden/web/i18n/cn.json
@@ -112,6 +112,17 @@
   "dashboard.pump_activity": "水泵活动",
   "dashboard.recent_window": "最近窗口",
   "dashboard.pump_duty": "占空比",
+  "dashboard.range": "范围",
+  "dashboard.export_csv": "导出 CSV",
+  "tab.overview": "总览",
+  "tab.camera": "摄像头",
+  "tab.irrigation": "灌溉",
+  "tab.technical": "技术",
+  "stream.safe_mode": "安全视频模式",
+  "stream.safe_mode_on": "安全模式已开启",
+  "stream.safe_mode_off": "安全模式已关闭",
+  "guided.infer_fail": "推理失败。请检查光照和对焦，并在较低分辨率下重试。",
+  "guided.low_conf": "低置信度：{reasons}。建议操作：稳定画面后重新推理。",
   "camera.load_fail_reconnect": "视频流失败，正在重连...",
   "camera.stream_fail": "摄像头视频流失败",
   "camera.photo_captured": "已拍照",
