--- a/firmware/smart-tomato-garden/web/i18n/en.json
+++ b/firmware/smart-tomato-garden/web/i18n/en.json
@@ -112,6 +112,17 @@
   "dashboard.pump_activity": "Pump activity",
   "dashboard.recent_window": "recent window",
   "dashboard.pump_duty": "Duty cycle",
+  "dashboard.range": "range",
+  "dashboard.export_csv": "Export CSV",
+  "tab.overview": "Overview",
+  "tab.camera": "Camera",
+  "tab.irrigation": "Irrigation",
+  "tab.technical": "Technical",
+  "stream.safe_mode": "Safe stream mode",
+  "stream.safe_mode_on": "Safe mode enabled",
+  "stream.safe_mode_off": "Safe mode disabled",
+  "guided.infer_fail": "Inference failed. Check lighting/focus and retry at a lower resolution.",
+  "guided.low_conf": "Low confidence: {reasons}. Suggested action: stabilize frame and rerun inference.",
   "camera.load_fail_reconnect": "Stream failed, retrying...",
   "camera.stream_fail": "Camera stream failed",
   "camera.photo_captured": "Photo captured",
