--- a/firmware/smart-tomato-garden/web/i18n/pt.json
+++ b/firmware/smart-tomato-garden/web/i18n/pt.json
@@ -112,6 +112,17 @@
   "dashboard.pump_activity": "Atividade da bomba",
   "dashboard.recent_window": "janela recente",
   "dashboard.pump_duty": "Duty cycle",
+  "dashboard.range": "janela",
+  "dashboard.export_csv": "Exportar CSV",
+  "tab.overview": "Visao geral",
+  "tab.camera": "Camera",
+  "tab.irrigation": "Irrigacao",
+  "tab.technical": "Tecnico",
+  "stream.safe_mode": "Modo seguro de stream",
+  "stream.safe_mode_on": "Modo seguro ativado",
+  "stream.safe_mode_off": "Modo seguro desativado",
+  "guided.infer_fail": "Falha na inferencia. Revise iluminacao, foco e tente novamente em resolucao menor.",
+  "guided.low_conf": "Confianca baixa: {reasons}. Acao sugerida: estabilize imagem e rode nova inferencia.",
   "camera.load_fail_reconnect": "Falha no stream, tentando reconectar...",
   "camera.stream_fail": "Falha no stream da camera",
   "camera.photo_captured": "Foto capturada",
